--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^2.0.1"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^6.1.5",
     "@types/dotenv": "^8.2.0",
     "@types/mongoose": "^5.5.32",
     "@types/node": "^12.12.12",
@@ -26,7 +27,6 @@
     "mongoose": "^5.7.12",
     "telegraf": "^3.33.3",
     "telegraf-i18n": "^6.6.0",
-    "typegoose": "^5.9.1",
     "typescript": "^3.7.2"
   }
 }
