--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "watch-js": "nodemon dist/app.js"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "@types/mongoose": "^5.10.4",
+    "@types/node": "^14.14.35",
+    "concurrently": "^6.0.0",
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "@typegoose/typegoose": "^7.3.0",
-    "@types/dotenv": "^8.2.0",
-    "@types/mongoose": "^5.7.32",
-    "@types/node": "^14.0.23",
+    "@typegoose/typegoose": "^7.6.0",
     "dotenv": "^8.2.0",
-    "mongoose": "^5.9.25",
+    "module-alias": "^2.2.2",
+    "mongoose": "5.10.18",
     "telegraf": "^3.38.0",
     "telegraf-i18n": "^6.6.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.2.3"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
