--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "telegram-bot-template",
+  "name": "telegram-bot-starter",
   "version": "1.0.0",
-  "description": "Telegram bot template based on grammY",
+  "description": "Telegram bot starter based on grammY",
   "main": "dist/app.js",
   "repository": "https://github.com/Borodutch/telegram-bot-template",
   "author": "backmeupplz <backmeupplz@gmail.com>",
