--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,8 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
   ],
-
   "rules": {
+    "@typescript-eslint/no-unsafe-argument": "error",
     "@typescript-eslint/no-floating-promises": "error",
     "require-await": "error",
     "@typescript-eslint/explicit-function-return-type": "off",
