--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ node_modules
 dist
 .env
 *.log
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
