--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
     "@grammyjs/i18n": "^0.3.0",
     "@grammyjs/runner": "^1.0.2",
     "@typegoose/typegoose": "^9.2.0",
-    "grammy": "^1.3.4",
-    "mongoose": "6.0.12",
+    "grammy": "^1.4.0",
+    "mongoose": "^6.0.13",
     "mongoose-findorcreate": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "concurrently": "^6.3.0",
+    "@types/node": "^16.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "concurrently": "^6.4.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "module-alias": "^2.2.2",
-    "nodemon": "^2.0.14",
+    "nodemon": "^2.0.15",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.2"
   },
   "_moduleAliases": {
     "@": "dist"
