--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose-findorcreate": "^3.0.0"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.11.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
