--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@grammyjs/i18n": "^0.5.0",
+    "@grammyjs/menu": "^1.0.2",
     "@grammyjs/runner": "^1.0.3",
     "dotenv": "^10.0.0",
     "envalid": "^7.2.2",
