--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "envalid": "^7.2.2",
     "grammy": "^1.5.0",
     "grammy-middlewares": "^1.0.11",
-    "mongoose": "^6.1.0",
-    "mongoose-findorcreate": "^3.0.0"
+    "mongoose": "^6.1.0"
   },
   "devDependencies": {
     "@typegoose/typegoose": "^9.3.1",
