--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "repository": "https://github.com/Borodutch/telegram-bot-template",
   "author": "backmeupplz <backmeupplz@gmail.com>",
   "license": "MIT",
+  "prettier": "@big-whale-labs/prettier-config",
   "scripts": {
     "distribute": "yarn build-ts && node dist/app.js",
     "develop": "tsc-watch --skipLibCheck --onSuccess 'node dist/app.js'",
     "build-ts": "tsc --skipLibCheck",
     "pretty": "prettier --check src",
-    "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src"
+    "lint": "yarn pretty && eslint --max-warnings 0 ./src/",
+    "lint-fix": "yarn eslint ./src/ --fix"
   },
   "dependencies": {
     "@grammyjs/i18n": "^0.5.0",
@@ -24,18 +26,13 @@
     "mongoose": "^6.1.0"
   },
   "devDependencies": {
+    "@big-whale-labs/bwl-eslint-backend": "^1.0.3",
+    "@big-whale-labs/prettier-config": "^1.1.3",
+    "@rushstack/eslint-patch": "^1.2.0",
     "@typegoose/typegoose": "^9.3.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.11.12",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-no-relative-import-paths": "^1.0.8",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "module-alias": "^2.2.2",
     "prettier": "^2.5.1",
     "source-map-support": "^0.5.21",
